 	- remove “machine” argument option;
 	- filter templates from restartable units in bash-completion;
 * units:
 	- remove “org.freedesktop.login1” busname;
 	- remove “org.freedesktop.systemd1” busname;
 	- remove “busnames” target;
 * po:
 	- update Russian translation;
 	- update French translation;
 * tests:
 	- remove “test-resolve” test;
 	- remove “test-bus-kernel” test;
 * build:
 	- remove USER_BUSNAMES_TARGET_WANTS unit path;
 	- remove BUSNAMES_TARGET_WANTS unit path;
 * remove busname unit type;

   systemd (214.9)
~~~~~~~
 * core:
 	- remove dbus get properties: CanStart, CanStop, CanReload, CanIsolate;
 	- remove dbus “SwitchRoot” method;
 	- don't generate /{etc,run}/machine-id file;
 	- don't dispatch sd_notify() messages and SIGCHLD multiple times to the same units;
 	- allow informing systemd about service status changes with RELOADING=1 and STOPPING=1
 	  sd_notify() messages;
 	- use the right timeout for stop processes we fork;
 	- allow services of Type=oneshot that specify no ExecStart= commands;
 	- add support for a configurable system-wide start-up timeout;
 	- print 'startup finished' messages even if we log to console;
 	- introduce "poweroff" as new failure action types;
 	- split up “starting” manager state into “initializing” and “starting”;
 	- remove “x-initrd.mount” mount option;
 	- remove switch-root module;
 * libsystemd:
 	- don't generate bus-error-mapping.c source file;
 	- split sd-event run into prepare/wait/dispatch;
 	- remove unused call bus_kernel_create_monitor();
 	- split bus_map_all_properties into multiple helpers;
 	- fix use-after-free in slot-release;
 * logind:
 	- add HandleLidSwitchDocked= option to logind.conf + documentation;
 	- fix memory-leak on DropController();
 * units:
 	- order “systemd-fsck@.service” after “local-fs-pre.target”;
 	- remove services: initrd-parse-etc, initrd-cleanup, initrd-switch-root;
 	- remove targets: initrd-fs, initrd-switch-root, initrd-root-fs, initrd;
 * systemctl: