@@ -45,6 +45,7 @@ systemd System and Service Manager
  * tests:
  	- remove “test-resolve” test;
  	- remove “test-bus-kernel” test;
+ 	- remove “test-bus-kernel-bloom” test;
  * build:
  	- remove USER_BUSNAMES_TARGET_WANTS unit path;
  	- remove BUSNAMES_TARGET_WANTS unit path;
